Fixed page spacing

--- a/desktop-style.scss
+++ b/desktop-style.scss
@@ -1,12 +1,19 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 13px;
     background: url("backgrounds/hello Red.jpeg");
     background-size: cover;
     background-position: center;
     overflow: hidden;
-    width: 98vw;
-    height: 100vh;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;  
 }
 
 
@@ -14,8 +21,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 750px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
-    
+    outline: 2px solid green;
 }
 
